--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "mongoose": "^5.10.3",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "ioredis": "^4.24.2",
   }
 }
